# manrs

./: .gitattributes  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
src/: args.rs  main.rs  source.rs
src/parser/html/: mod.rs  util.rs
src/viewer/: mod.rs  utils.rs
src/viewer/text/: plain.rs  rich.rs
src/viewer/tui/: mod.rs  views.rs
