# SPDX-FileCopyrightText: 2020-2021 Robin Krahl <robin.krahl@ireas.org>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "manrs"
version = "0.8.0"
authors = ["Feeco <lifeike67@gmail.com>"]
edition = "2021"
description = "Command-line viewer for rustdoc documentation (modernized fork of rusty-man)"
homepage = "https://github.com/Feeco-Li/manrs"
repository = "https://github.com/Feeco-Li/manrs"
keywords = ["doc", "cli", "rustdoc", "documentation", "viewer"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
license = "MIT"
exclude = [".builds/*", "tests/html/*", "tests/snapshots/*"]

[dependencies]
anyhow = "1.0"
html2text = "0.12"
scraper = "0.26"
ego-tree = "0.11"
log = "0.4"
merge = "0.1.0"
pager = "0.16"
serde_json = "1.0"
serde_tuple = "0.5.0"
termion = "1.5"
toml = "0.8"
url = "2"
webbrowser = "1"
xdg = "3"

[dependencies.cursive]
version = "0.21"
default-features = false
features = ["termion-backend"]

[dependencies.env_logger]
version = "0.11"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.syntect]
version = "4"
default-features = false
features = ["parsing", "regex-onig", "assets", "dump-load"]

[dependencies.text-style]
version = "0.3.0"
features = ["syntect", "termion"]

[dev-dependencies]
assert_cmd = "1.0.1"
insta = "1"
rustc_version = "0.4.0"
semver = "1"
tempfile = "3.1.0"
